--- a/Makefile.in
+++ b/Makefile.in
@@ -4,13 +4,14 @@ CXX_NOWARN =
 CXX_OPT = -O3
 CXX_MISC = -fpic
 CXX_INCLUDE = -Iinclude -Ilib/juble/include -Ilib/juble/lib/ruby/include \
-							-Ilib/juble/lib/ruby/.ext/include/x86_64-linux
+							-Ilib/juble/lib/ruby/.ext/include/x86_64-linux \
+							-Ilib/juble/lib/ruby/.ext/include/x86_64-darwin12.0
 CXX_PLATFORM_FLAGS = %CXX_PLATFORM_FLAGS%
 CXX_FLAGS = -std=c++1y ${CXX_WARN} ${CXX_NOWARN} ${CXX_OPT} \
 						${CXX_MISC} ${CXX_PLATFORM_FLAGS} ${CXX_INCLUDE} 
 
 LD_PLATFORM_LIBS = %LD_PLATFORM_LIBS%
-LD_LIBS = -lclang -Llib/juble/lib/ruby -lruby-static -lboost_filesystem \
+LD_LIBS = -lclang -Llib/juble/lib/ruby -lruby-static -lboost_system -lboost_filesystem \
 					${LD_PLATFORM_LIBS}
 
 PROJECT = %PROJECT%
