--- a/Makefile.in
+++ b/Makefile.in
@@ -3,9 +3,7 @@ CXX_WARN = -Wall -Wextra -pedantic
 CXX_NOWARN =
 CXX_OPT = -O3
 CXX_MISC = -fpic
-CXX_INCLUDE = -Iinclude -Ilib/juble/include -Ilib/juble/lib/ruby/include \
-							-Ilib/juble/lib/ruby/.ext/include/x86_64-linux \
-							-Ilib/juble/lib/ruby/.ext/include/x86_64-darwin12.0
+CXX_INCLUDE = -Iinclude
 CXX_PLATFORM_FLAGS = %CXX_PLATFORM_FLAGS%
 CXX_FLAGS = -std=c++1y ${CXX_WARN} ${CXX_NOWARN} ${CXX_OPT} \
 						${CXX_MISC} ${CXX_PLATFORM_FLAGS} ${CXX_INCLUDE} 
