--- a/Makefile.in
+++ b/Makefile.in
@@ -1,6 +1,6 @@
 CXX = %CXX%
-CXX_WARN = -Wall -Wextra -pedantic -Wno-missing-field-initializers
-CXX_NOWARN =
+CXX_WARN = -Wall -Wextra -pedantic
+CXX_NOWARN = -Wno-missing-field-initializers
 CXX_OPT = -O3
 CXX_MISC = -fpic
 CXX_INCLUDE = -Iinclude \
