#3 add platform flags last

--- a/Makefile.in
+++ b/Makefile.in
@@ -23,7 +23,7 @@ CXX_INCLUDE = -Iinclude \
 							-I${PWD}/lib/boost/filesystem/include
 CXX_PLATFORM_FLAGS = %CXX_PLATFORM_FLAGS%
 CXX_FLAGS = -std=c++1y ${CXX_WARN} ${CXX_NOWARN} ${CXX_OPT} \
-						${CXX_MISC} ${CXX_PLATFORM_FLAGS} ${CXX_INCLUDE} 
+						${CXX_MISC} ${CXX_INCLUDE} ${CXX_PLATFORM_FLAGS}
 
 LD_PLATFORM_LIBS = %LD_PLATFORM_LIBS%
 LD_LIBS = ${LD_PLATFORM_LIBS} -lclang -llua
