Use absolute paths in clang linking #10

--- a/Makefile.in
+++ b/Makefile.in
@@ -1,157 +1,158 @@
 CXX = %CXX%
 CXX_WARN = -Wall -Wextra -pedantic
-CXX_NOWARN = -Wno-missing-field-initializers
+CXX_NOWARN = -Wno-missing-field-initializers -Wno-unused-command-line-argument
 CXX_OPT = -O3
-CXX_MISC = -fPIC -pthread
+CXX_MISC = -fPIC
 CXX_INCLUDE = -Iinclude \
-							-I${PWD}/lib/boost/config/include \
-							-I${PWD}/lib/boost/system/include \
-							-I${PWD}/lib/boost/detail/include \
-							-I${PWD}/lib/boost/utility/include \
-							-I${PWD}/lib/boost/core/include \
-							-I${PWD}/lib/boost/type_traits/include \
-							-I${PWD}/lib/boost/mpl/include \
-							-I${PWD}/lib/boost/preprocessor/include \
-							-I${PWD}/lib/boost/predef/include \
-							-I${PWD}/lib/boost/iterator/include \
-							-I${PWD}/lib/boost/smart_ptr/include \
-							-I${PWD}/lib/boost/exception/include \
-							-I${PWD}/lib/boost/io/include \
-							-I${PWD}/lib/boost/functional/include \
-							-I${PWD}/lib/boost/range/include \
-							-I${PWD}/lib/boost/include \
-							-I${PWD}/lib/boost/filesystem/include
+              -I${PWD}/lib/boost/config/include \
+              -I${PWD}/lib/boost/system/include \
+              -I${PWD}/lib/boost/detail/include \
+              -I${PWD}/lib/boost/utility/include \
+              -I${PWD}/lib/boost/core/include \
+              -I${PWD}/lib/boost/type_traits/include \
+              -I${PWD}/lib/boost/mpl/include \
+              -I${PWD}/lib/boost/preprocessor/include \
+              -I${PWD}/lib/boost/predef/include \
+              -I${PWD}/lib/boost/iterator/include \
+              -I${PWD}/lib/boost/smart_ptr/include \
+              -I${PWD}/lib/boost/exception/include \
+              -I${PWD}/lib/boost/io/include \
+              -I${PWD}/lib/boost/functional/include \
+              -I${PWD}/lib/boost/range/include \
+              -I${PWD}/lib/boost/include \
+              -I${PWD}/lib/boost/filesystem/include
 CXX_PLATFORM_FLAGS = %CXX_PLATFORM_FLAGS%
 CXX_FLAGS = -std=c++1y ${CXX_WARN} ${CXX_NOWARN} ${CXX_OPT} \
-						${CXX_MISC} ${CXX_INCLUDE} ${CXX_PLATFORM_FLAGS}
+            ${CXX_MISC} ${CXX_INCLUDE} ${CXX_PLATFORM_FLAGS}
 
+CLANG_DIR = %CLANG_DIR%
 LD_PLATFORM_LIBS = %LD_PLATFORM_LIBS%
-LD_LIBS = ${LD_PLATFORM_LIBS} -llua -lz \
-					-l:libclang.a \
-					-l:libclangIndex.a \
-					-l:libclangFormat.a \
-					-l:libclangTooling.a \
-					-l:libclangFrontendTool.a \
-					-l:libclangFrontend.a \
-					-l:libclangDriver.a \
-					-l:libclangSerialization.a \
-					-l:libclangCodeGen.a \
-					-l:libclangParse.a \
-					-l:libclangSema.a \
-					-l:libclangStaticAnalyzerFrontend.a \
-					-l:libclangStaticAnalyzerCheckers.a \
-					-l:libclangStaticAnalyzerCore.a \
-					-l:libclangAnalysis.a \
-					-l:libclangARCMigrate.a \
-					-l:libclangRewriteFrontend.a \
-					-l:libclangRewrite.a \
-					-l:libclangEdit.a \
-					-l:libclangAST.a \
-					-l:libclangLex.a \
-					-l:libclangBasic.a \
-					-l:libLLVMLTO.a \
-					-l:libLLVMObjCARCOpts.a \
-					-l:libLLVMLinker.a \
-					-l:libLLVMipo.a \
-					-l:libLLVMVectorize.a \
-					-l:libLLVMBitWriter.a \
-					-l:libLLVMIRReader.a \
-					-l:libLLVMAsmParser.a \
-					-l:libLLVMR600CodeGen.a \
-					-l:libLLVMR600Desc.a \
-					-l:libLLVMR600Info.a \
-					-l:libLLVMR600AsmPrinter.a \
-					-l:libLLVMSystemZDisassembler.a \
-					-l:libLLVMSystemZCodeGen.a \
-					-l:libLLVMSystemZAsmParser.a \
-					-l:libLLVMSystemZDesc.a \
-					-l:libLLVMSystemZInfo.a \
-					-l:libLLVMSystemZAsmPrinter.a \
-					-l:libLLVMHexagonCodeGen.a \
-					-l:libLLVMHexagonAsmPrinter.a \
-					-l:libLLVMHexagonDesc.a \
-					-l:libLLVMHexagonInfo.a \
-					-l:libLLVMNVPTXCodeGen.a \
-					-l:libLLVMNVPTXDesc.a \
-					-l:libLLVMNVPTXInfo.a \
-					-l:libLLVMNVPTXAsmPrinter.a \
-					-l:libLLVMCppBackendCodeGen.a \
-					-l:libLLVMCppBackendInfo.a \
-					-l:libLLVMMSP430CodeGen.a \
-					-l:libLLVMMSP430Desc.a \
-					-l:libLLVMMSP430Info.a \
-					-l:libLLVMMSP430AsmPrinter.a \
-					-l:libLLVMXCoreDisassembler.a \
-					-l:libLLVMXCoreCodeGen.a \
-					-l:libLLVMXCoreDesc.a \
-					-l:libLLVMXCoreInfo.a \
-					-l:libLLVMXCoreAsmPrinter.a \
-					-l:libLLVMMipsDisassembler.a \
-					-l:libLLVMMipsCodeGen.a \
-					-l:libLLVMMipsAsmParser.a \
-					-l:libLLVMMipsDesc.a \
-					-l:libLLVMMipsInfo.a \
-					-l:libLLVMMipsAsmPrinter.a \
-					-l:libLLVMAArch64Disassembler.a \
-					-l:libLLVMAArch64CodeGen.a \
-					-l:libLLVMAArch64AsmParser.a \
-					-l:libLLVMAArch64Desc.a \
-					-l:libLLVMAArch64Info.a \
-					-l:libLLVMAArch64AsmPrinter.a \
-					-l:libLLVMAArch64Utils.a \
-					-l:libLLVMARMDisassembler.a \
-					-l:libLLVMARMCodeGen.a \
-					-l:libLLVMARMAsmParser.a \
-					-l:libLLVMARMDesc.a \
-					-l:libLLVMARMInfo.a \
-					-l:libLLVMARMAsmPrinter.a \
-					-l:libLLVMPowerPCDisassembler.a \
-					-l:libLLVMPowerPCCodeGen.a \
-					-l:libLLVMPowerPCAsmParser.a \
-					-l:libLLVMPowerPCDesc.a \
-					-l:libLLVMPowerPCInfo.a \
-					-l:libLLVMPowerPCAsmPrinter.a \
-					-l:libLLVMSparcDisassembler.a \
-					-l:libLLVMSparcCodeGen.a \
-					-l:libLLVMSparcAsmParser.a \
-					-l:libLLVMSparcDesc.a \
-					-l:libLLVMSparcInfo.a \
-					-l:libLLVMSparcAsmPrinter.a \
-					-l:libLLVMTableGen.a \
-					-l:libLLVMDebugInfo.a \
-					-l:libLLVMOption.a \
-					-l:libLLVMX86Disassembler.a \
-					-l:libLLVMX86AsmParser.a \
-					-l:libLLVMX86CodeGen.a \
-					-l:libLLVMSelectionDAG.a \
-					-l:libLLVMAsmPrinter.a \
-					-l:libLLVMX86Desc.a \
-					-l:libLLVMX86Info.a \
-					-l:libLLVMX86AsmPrinter.a \
-					-l:libLLVMX86Utils.a \
-					-l:libLLVMJIT.a \
-					-l:libLLVMLineEditor.a \
-					-l:libLLVMMCAnalysis.a \
-					-l:libLLVMMCDisassembler.a \
-					-l:libLLVMInstrumentation.a \
-					-l:libLLVMInterpreter.a \
-					-l:libLLVMCodeGen.a \
-					-l:libLLVMScalarOpts.a \
-					-l:libLLVMInstCombine.a \
-					-l:libLLVMTransformUtils.a \
-					-l:libLLVMipa.a \
-					-l:libLLVMAnalysis.a \
-					-l:libLLVMProfileData.a \
-					-l:libLLVMMCJIT.a \
-					-l:libLLVMTarget.a \
-					-l:libLLVMRuntimeDyld.a \
-					-l:libLLVMObject.a \
-					-l:libLLVMMCParser.a \
-					-l:libLLVMBitReader.a \
-					-l:libLLVMExecutionEngine.a \
-					-l:libLLVMMC.a \
-					-l:libLLVMCore.a \
-					-l:libLLVMSupport.a
+LD_LIBS = ${LD_PLATFORM_LIBS} -pthread -llua -lz -lncurses \
+          ${CLANG_DIR}/lib/libclang.a \
+          ${CLANG_DIR}/lib/libclangIndex.a \
+          ${CLANG_DIR}/lib/libclangFormat.a \
+          ${CLANG_DIR}/lib/libclangTooling.a \
+          ${CLANG_DIR}/lib/libclangFrontendTool.a \
+          ${CLANG_DIR}/lib/libclangFrontend.a \
+          ${CLANG_DIR}/lib/libclangDriver.a \
+          ${CLANG_DIR}/lib/libclangSerialization.a \
+          ${CLANG_DIR}/lib/libclangCodeGen.a \
+          ${CLANG_DIR}/lib/libclangParse.a \
+          ${CLANG_DIR}/lib/libclangSema.a \
+          ${CLANG_DIR}/lib/libclangStaticAnalyzerFrontend.a \
+          ${CLANG_DIR}/lib/libclangStaticAnalyzerCheckers.a \
+          ${CLANG_DIR}/lib/libclangStaticAnalyzerCore.a \
+          ${CLANG_DIR}/lib/libclangAnalysis.a \
+          ${CLANG_DIR}/lib/libclangARCMigrate.a \
+          ${CLANG_DIR}/lib/libclangRewriteFrontend.a \
+          ${CLANG_DIR}/lib/libclangRewrite.a \
+          ${CLANG_DIR}/lib/libclangEdit.a \
+          ${CLANG_DIR}/lib/libclangAST.a \
+          ${CLANG_DIR}/lib/libclangLex.a \
+          ${CLANG_DIR}/lib/libclangBasic.a \
+          ${CLANG_DIR}/lib/libLLVMLTO.a \
+          ${CLANG_DIR}/lib/libLLVMObjCARCOpts.a \
+          ${CLANG_DIR}/lib/libLLVMLinker.a \
+          ${CLANG_DIR}/lib/libLLVMipo.a \
+          ${CLANG_DIR}/lib/libLLVMVectorize.a \
+          ${CLANG_DIR}/lib/libLLVMBitWriter.a \
+          ${CLANG_DIR}/lib/libLLVMIRReader.a \
+          ${CLANG_DIR}/lib/libLLVMAsmParser.a \
+          ${CLANG_DIR}/lib/libLLVMR600CodeGen.a \
+          ${CLANG_DIR}/lib/libLLVMR600Desc.a \
+          ${CLANG_DIR}/lib/libLLVMR600Info.a \
+          ${CLANG_DIR}/lib/libLLVMR600AsmPrinter.a \
+          ${CLANG_DIR}/lib/libLLVMSystemZDisassembler.a \
+          ${CLANG_DIR}/lib/libLLVMSystemZCodeGen.a \
+          ${CLANG_DIR}/lib/libLLVMSystemZAsmParser.a \
+          ${CLANG_DIR}/lib/libLLVMSystemZDesc.a \
+          ${CLANG_DIR}/lib/libLLVMSystemZInfo.a \
+          ${CLANG_DIR}/lib/libLLVMSystemZAsmPrinter.a \
+          ${CLANG_DIR}/lib/libLLVMHexagonCodeGen.a \
+          ${CLANG_DIR}/lib/libLLVMHexagonAsmPrinter.a \
+          ${CLANG_DIR}/lib/libLLVMHexagonDesc.a \
+          ${CLANG_DIR}/lib/libLLVMHexagonInfo.a \
+          ${CLANG_DIR}/lib/libLLVMNVPTXCodeGen.a \
+          ${CLANG_DIR}/lib/libLLVMNVPTXDesc.a \
+          ${CLANG_DIR}/lib/libLLVMNVPTXInfo.a \
+          ${CLANG_DIR}/lib/libLLVMNVPTXAsmPrinter.a \
+          ${CLANG_DIR}/lib/libLLVMCppBackendCodeGen.a \
+          ${CLANG_DIR}/lib/libLLVMCppBackendInfo.a \
+          ${CLANG_DIR}/lib/libLLVMMSP430CodeGen.a \
+          ${CLANG_DIR}/lib/libLLVMMSP430Desc.a \
+          ${CLANG_DIR}/lib/libLLVMMSP430Info.a \
+          ${CLANG_DIR}/lib/libLLVMMSP430AsmPrinter.a \
+          ${CLANG_DIR}/lib/libLLVMXCoreDisassembler.a \
+          ${CLANG_DIR}/lib/libLLVMXCoreCodeGen.a \
+          ${CLANG_DIR}/lib/libLLVMXCoreDesc.a \
+          ${CLANG_DIR}/lib/libLLVMXCoreInfo.a \
+          ${CLANG_DIR}/lib/libLLVMXCoreAsmPrinter.a \
+          ${CLANG_DIR}/lib/libLLVMMipsDisassembler.a \
+          ${CLANG_DIR}/lib/libLLVMMipsCodeGen.a \
+          ${CLANG_DIR}/lib/libLLVMMipsAsmParser.a \
+          ${CLANG_DIR}/lib/libLLVMMipsDesc.a \
+          ${CLANG_DIR}/lib/libLLVMMipsInfo.a \
+          ${CLANG_DIR}/lib/libLLVMMipsAsmPrinter.a \
+          ${CLANG_DIR}/lib/libLLVMAArch64Disassembler.a \
+          ${CLANG_DIR}/lib/libLLVMAArch64CodeGen.a \
+          ${CLANG_DIR}/lib/libLLVMAArch64AsmParser.a \
+          ${CLANG_DIR}/lib/libLLVMAArch64Desc.a \
+          ${CLANG_DIR}/lib/libLLVMAArch64Info.a \
+          ${CLANG_DIR}/lib/libLLVMAArch64AsmPrinter.a \
+          ${CLANG_DIR}/lib/libLLVMAArch64Utils.a \
+          ${CLANG_DIR}/lib/libLLVMARMDisassembler.a \
+          ${CLANG_DIR}/lib/libLLVMARMCodeGen.a \
+          ${CLANG_DIR}/lib/libLLVMARMAsmParser.a \
+          ${CLANG_DIR}/lib/libLLVMARMDesc.a \
+          ${CLANG_DIR}/lib/libLLVMARMInfo.a \
+          ${CLANG_DIR}/lib/libLLVMARMAsmPrinter.a \
+          ${CLANG_DIR}/lib/libLLVMPowerPCDisassembler.a \
+          ${CLANG_DIR}/lib/libLLVMPowerPCCodeGen.a \
+          ${CLANG_DIR}/lib/libLLVMPowerPCAsmParser.a \
+          ${CLANG_DIR}/lib/libLLVMPowerPCDesc.a \
+          ${CLANG_DIR}/lib/libLLVMPowerPCInfo.a \
+          ${CLANG_DIR}/lib/libLLVMPowerPCAsmPrinter.a \
+          ${CLANG_DIR}/lib/libLLVMSparcDisassembler.a \
+          ${CLANG_DIR}/lib/libLLVMSparcCodeGen.a \
+          ${CLANG_DIR}/lib/libLLVMSparcAsmParser.a \
+          ${CLANG_DIR}/lib/libLLVMSparcDesc.a \
+          ${CLANG_DIR}/lib/libLLVMSparcInfo.a \
+          ${CLANG_DIR}/lib/libLLVMSparcAsmPrinter.a \
+          ${CLANG_DIR}/lib/libLLVMTableGen.a \
+          ${CLANG_DIR}/lib/libLLVMDebugInfo.a \
+          ${CLANG_DIR}/lib/libLLVMOption.a \
+          ${CLANG_DIR}/lib/libLLVMX86Disassembler.a \
+          ${CLANG_DIR}/lib/libLLVMX86AsmParser.a \
+          ${CLANG_DIR}/lib/libLLVMX86CodeGen.a \
+          ${CLANG_DIR}/lib/libLLVMSelectionDAG.a \
+          ${CLANG_DIR}/lib/libLLVMAsmPrinter.a \
+          ${CLANG_DIR}/lib/libLLVMX86Desc.a \
+          ${CLANG_DIR}/lib/libLLVMX86Info.a \
+          ${CLANG_DIR}/lib/libLLVMX86AsmPrinter.a \
+          ${CLANG_DIR}/lib/libLLVMX86Utils.a \
+          ${CLANG_DIR}/lib/libLLVMJIT.a \
+          ${CLANG_DIR}/lib/libLLVMLineEditor.a \
+          ${CLANG_DIR}/lib/libLLVMMCAnalysis.a \
+          ${CLANG_DIR}/lib/libLLVMMCDisassembler.a \
+          ${CLANG_DIR}/lib/libLLVMInstrumentation.a \
+          ${CLANG_DIR}/lib/libLLVMInterpreter.a \
+          ${CLANG_DIR}/lib/libLLVMCodeGen.a \
+          ${CLANG_DIR}/lib/libLLVMScalarOpts.a \
+          ${CLANG_DIR}/lib/libLLVMInstCombine.a \
+          ${CLANG_DIR}/lib/libLLVMTransformUtils.a \
+          ${CLANG_DIR}/lib/libLLVMipa.a \
+          ${CLANG_DIR}/lib/libLLVMAnalysis.a \
+          ${CLANG_DIR}/lib/libLLVMProfileData.a \
+          ${CLANG_DIR}/lib/libLLVMMCJIT.a \
+          ${CLANG_DIR}/lib/libLLVMTarget.a \
+          ${CLANG_DIR}/lib/libLLVMRuntimeDyld.a \
+          ${CLANG_DIR}/lib/libLLVMObject.a \
+          ${CLANG_DIR}/lib/libLLVMMCParser.a \
+          ${CLANG_DIR}/lib/libLLVMBitReader.a \
+          ${CLANG_DIR}/lib/libLLVMExecutionEngine.a \
+          ${CLANG_DIR}/lib/libLLVMMC.a \
+          ${CLANG_DIR}/lib/libLLVMCore.a \
+          ${CLANG_DIR}/lib/libLLVMSupport.a
 
 PROJECT = %PROJECT%
 
@@ -175,7 +176,9 @@ ${TARGET}_setup: setup ${BOOST_SYSTEM} ${BOOST_FILESYSTEM}
 
 ${TARGET}: ${TARGET}_setup ${OBJS}
 	$(call log,"Linking $@")
-	${CXX} -shared -o $@ ${CXX_FLAGS} ${OUT_OBJS} ${LD_LIBS} -Llib/boost/system/bin -Llib/boost/filesystem/bin -lcolor_coded_boost_system -lcolor_coded_boost_filesystem
+	${CXX} -shared -o $@ ${CXX_FLAGS} ${OUT_OBJS} ${LD_LIBS} \
+          -Llib/boost/system/bin -Llib/boost/filesystem/bin \
+	  -lcolor_coded_boost_system -lcolor_coded_boost_filesystem
 
 setup:
 	mkdir -p ${OBJ_DIR} ${OUT_DIR}
